--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tiramisu Heaven</title>
-<script defer src="main.js"></script></head>
-<body>
-
-    <div id="content">
-    </div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Tiramisu Heaven</title><script defer="defer" src="main.js"></script></head><body><div id="content"></div></body></html>
